# contextual-logging

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd-workflow.yml
.ide/: settings.json
src/contextual/logging/: __init__.py
src/contextual/logging/formater/: __init__.py  attributes.py
src/contextual/logging/hinting/: __init__.py  fields_collector.py
src/contextual/logging/model/: __init__.py  common_log_record.py  error_log_record.py  http_log_record.py
src/contextual/logging/processor/: __init__.py  common_log_processor.py  error_log_processor.py
tests/: conftest.py  helpers.py
tests/contextual/logging/: test_logger_factory.py  test_logger_process.py  test_logger_setup.py  test_logger_smoke.py  test_logger_yaml_configuration.py
tests/contextual/logging/formatter/: test_contextual_json_formatter.py
tests/contextual/logging/hinting/: test_fields_collector.py
tests/contextual/logging/model/: test_base_log_record.py  test_common_log_record.py  test_error_log_record.py
tests/contextual/logging/processor/: test_base_log_processor.py  test_common_log_processor.py  test_error_log_processor.py  test_http_log_processor.py  test_http_log_processor_fastapi.py
